--- a/heat/hubzero.yaml
+++ b/heat/hubzero.yaml
@@ -30,7 +30,7 @@ parameters:
     description: Name of an existing key pair to enable SSH access to the instance.
     default: nectar_dev
 
-  ms_sql_root_password:
+  my_sql_root_password:
     type: string
     label: MySql Root Password
     description: The password that gives absolute access to the database.
@@ -52,7 +52,11 @@ resources:
       flavor: { get_param: flavor }
       key_name: { get_param: key }
       user_data:
-        get_file: https://raw.githubusercontent.com/MartinPaulo/puppet_hub_zero/master/puppet/scripts/bootstrap.sh
+        str_replace:
+          params:
+            __my_sql_root_password: { get_param: image_id my_sql_root_password }
+          template:
+            get_file: https://raw.githubusercontent.com/MartinPaulo/puppet_hub_zero/master/puppet/scripts/bootstrap.sh
       user_data_format: RAW
 
 
