Now passing the slapd password through to the heira file.

--- a/heat/environment_template.yaml
+++ b/heat/environment_template.yaml
@@ -6,3 +6,4 @@
 #                     hubzero_test
 parameters:
   my_sql_root_password: # 6-16 characters and numbers only, starting with a Capital
+  slapd_root_password: # 6-16 characters and numbers only, starting with a Capital
