--- a/heat/hubzero.yaml
+++ b/heat/hubzero.yaml
@@ -43,6 +43,19 @@ parameters:
       - allowed_pattern: "[A-Z]+[a-zA-Z0-9]*"
         description: The password must start with an uppercase character.
 
+  slapd_root_password:
+    type: string
+    label: LDAP Server Root Password
+    description: The password that gives absolute access to the LDAP service.
+    hidden: true
+    constraints: # update the environment_template.yaml if changing the constraints...
+      - length: { min: 6, max: 16 }
+        description: The password length must be between 6 and 16 characters long.
+      - allowed_pattern: "[a-zA-Z0-9]+"
+        description: The password must consist of characters and numbers only.
+      - allowed_pattern: "[A-Z]+[a-zA-Z0-9]*"
+        description: The password must start with an uppercase character.
+
 
 resources:
   hubZero_instance:
@@ -55,6 +68,7 @@ resources:
         str_replace:
           params:
             __my_sql_root_password: { get_param: my_sql_root_password }
+            __slapd_root_password: { get_param: slapd_root_password }
           template:
             get_file: https://raw.githubusercontent.com/MartinPaulo/puppet_hub_zero/master/puppet/scripts/bootstrap.sh
       user_data_format: RAW
