--- a/heat/hubzero.yaml
+++ b/heat/hubzero.yaml
@@ -56,6 +56,14 @@ parameters:
       - allowed_pattern: "[A-Z]+[a-zA-Z0-9]*"
         description: The password must start with an uppercase character.
 
+  hub_zero_version:
+    type: string
+    label: HubZero Version
+    description: The version of HubZero to install.
+    default: 1_1
+    constraints:
+      - allowed_values: [1_1, 1_2, 1_3]
+        description: Will install either 1.1.0, 1.2.2, or 1.3.0
 
 resources:
   hubZero_instance:
@@ -69,6 +77,7 @@ resources:
           params:
             __my_sql_root_password: { get_param: my_sql_root_password }
             __slapd_root_password: { get_param: slapd_root_password }
+            __hub_zero_version: {get_param: hub_zero_version }
           template:
             get_file: https://raw.githubusercontent.com/MartinPaulo/puppet_hub_zero/master/puppet/scripts/bootstrap.sh
       user_data_format: RAW
