First cut at documentation: to see how it is handled by github.

--- a/heat/environment_template.yaml
+++ b/heat/environment_template.yaml
@@ -7,4 +7,4 @@
 parameters:
   my_sql_root_password: # 6-16 characters and numbers only, starting with a Capital
   slapd_root_password: # 6-16 characters and numbers only, starting with a Capital
-  hub_zero_version: 1.2
+  hub_zero_version: 1.2  # 1.1 | 1.2 | 1.3
