Changed ssh output message and made the instance IP address consistent with the rest of the outputs.

--- a/heat/hubzero.yaml
+++ b/heat/hubzero.yaml
@@ -99,7 +99,7 @@ outputs:
     value: { get_attr: [hubZero_instance, name] } # TODO: is not returning anything?
 
   instance_ip:
-    description: The IP address of the instance
+    description: "The IP address of the instance:"
     value: { get_attr: [hubZero_instance, first_address] }
 
   instance_url:
@@ -111,7 +111,7 @@ outputs:
           host: { get_attr: [hubZero_instance, first_address] }
 
   instance_ssh:
-    description: "The ssh address of the instance:"
+    description: "A command to ssh into the instance:"
     value:
       str_replace:
         template: ssh debian@host -i ~/.ssh/key.pem
