--- a/heat/environment_template.yaml
+++ b/heat/environment_template.yaml
@@ -8,3 +8,4 @@ parameters:
   my_sql_root_password: # 6-16 characters and numbers only, starting with a Capital
   slapd_root_password: # 6-16 characters and numbers only, starting with a Capital
   hub_zero_version: 1.2  # 1.1 | 1.2 | 1.3
+  email: # a valid email to notify when the installation is complete.
