--- a/heat/hubzero.yaml
+++ b/heat/hubzero.yaml
@@ -30,10 +30,15 @@ parameters:
     description: Name of an existing key pair to enable SSH access to the instance.
     default: nectar_dev
 
+  email:
+    type: string
+    label: Email Address
+    description: The email address to notify when the installation is complete.
+
   my_sql_root_password:
     type: string
     label: MySql Root Password
-    description: The password that gives absolute access to the database.
+    description: The password that gives absolute access to the database (v1.1 only).
     hidden: true
     constraints: # update the environment_template.yaml if changing the constraints...
       - length: { min: 6, max: 16 }
@@ -87,7 +92,8 @@ resources:
           params:
             __my_sql_root_password: { get_param: my_sql_root_password }
             __slapd_root_password: { get_param: slapd_root_password }
-            __hub_zero_version: {get_param: hub_zero_version }
+            __hub_zero_version: { get_param: hub_zero_version }
+            __email: { get_param: email}
           template:
             get_file: https://raw.githubusercontent.com/MartinPaulo/puppet_hub_zero/master/puppet/scripts/bootstrap.sh
       user_data_format: RAW
