--- a/heat/environment_template.yaml
+++ b/heat/environment_template.yaml
@@ -9,3 +9,4 @@ parameters:
   slapd_root_password: # 6-16 characters and numbers only, starting with a Capital
   hub_zero_version: 1.2  # 1.1 | 1.2 | 1.3
   email: # a valid email to notify when the installation is complete.
+  hostname: # a valid fully quailified hostname, eg: hubzero.v3.edu.au
