--- a/heat/hubzero.yaml
+++ b/heat/hubzero.yaml
@@ -110,6 +110,10 @@ outputs:
     description: "The name of the instance:"
     value: { get_attr: [hubZero_instance, name] } # TODO: is not returning anything?
 
+  instance_aws_name:
+    description: "The AWS compatible instance name:"
+    value: { get_attr: [hubZero_instance, instance_name] }
+
   instance_ip:
     description: "The IP address of the instance:"
     value: { get_attr: [hubZero_instance, first_address] }
