--- a/heat/environment_template.yaml
+++ b/heat/environment_template.yaml
@@ -1,5 +1,8 @@
 # This file is for sensitive heat data - eg: passwords, etc.
 # To use it, make a copy of this file and add the required parameters.
+# The passwords will be used to set the passwords for the software on the target machine
+# It would appear that the mysql root password is overwritten by the HUBZero installation, so it's
+#   effectively a throw away password.
 # Then when launching the instance pass it in via the command line - eg:
 #   heat stack-create --template-file=IdeaProjects/HubZeroPuppet/heat/hubzero.yaml \
 #                     --environment-file=IdeaProjects/HubZeroPuppet/heat/environment.yaml \
@@ -8,5 +11,5 @@ parameters:
   my_sql_root_password: # 6-16 characters and numbers only, starting with a Capital
   slapd_root_password: # 6-16 characters and numbers only, starting with a Capital
   hub_zero_version: # 1.1 | 1.2 | 1.3 | 1.3.1
-  email: # a valid email to notify when the installation is complete.
+  email: # a valid email address to notify when the installation is complete.
   hostname: # a valid fully quailified hostname, eg: hubzero.v3.edu.au
