--- a/puppet/modules/nrpe/files/check_apachememory.cfg
+++ b/puppet/modules/nrpe/files/check_apachememory.cfg
@@ -1,1 +1,1 @@
-command[apachememory]=/usr/lib/nagios/plugins/check_cpu_proc.sh
+command[apachememory]=/usr/lib/nagios/plugins/check_cpu_proc.sh -p apache2 -w 80 -c 90
