--- a/heat/hubzero.yaml
+++ b/heat/hubzero.yaml
@@ -99,15 +99,15 @@ resources:
       GroupDescription: Test group to demonstrate Neutron security group functionality with Heat.
       SecurityGroupIngress: [
         # https
-        {CidrIp: "0.0.0.0/0", IpProtocol: "tcp",  FromPort: "443", ToPort: "443"},
+        {CidrIp: 0.0.0.0/0, IpProtocol: tcp,  FromPort: '443', ToPort: '443'},
         # http
-        {CidrIp: "0.0.0.0/0", IpProtocol: "tcp",  FromPort: "80", ToPort: "80"},
+        {CidrIp: 0.0.0.0/0, IpProtocol: tcp,  FromPort: '80', ToPort: '80'},
         # nagios
-        {CidrIp: "144.6.225.113/32", IpProtocol: "tcp",  FromPort: "5666", ToPort: "5666"},
+        {CidrIp: 144.6.225.113/32, IpProtocol: tcp, FromPort: '5666', ToPort: '5666'},
         # ssh
-        {CidrIp: "0.0.0.0/0", IpProtocol: "tcp",  FromPort: "22", ToPort: "22"},
+        {CidrIp: 0.0.0.0/0, IpProtocol: tcp,  FromPort: '22', ToPort: '22'},
         # ping
-        {CidrIp: "0.0.0.0/0", IpProtocol: "icmp"}]
+        {CidrIp: 0.0.0.0/0, IpProtocol: icmp, FromPort: '-1', ToPort: '-1'}]
 
   hubZero_instance:
     type: OS::Nova::Server
