--- a/heat/environment_template.yaml
+++ b/heat/environment_template.yaml
@@ -13,4 +13,5 @@ parameters:
   hub_zero_version: # 1.1 | 1.2 | 1.3 | 1.3.1
   email: # a valid email address to notify when the installation is complete.
   hostname: # a valid fully quailified hostname, eg: hubzero.v3.edu.au
-  nagiosserver : "nagios.vpac.org",
+  nagiosserver : # the nagios host that will be monitoring this server.
+  key: # the keypair to use to launch the vm
