Updated to use the nagios.v3apps.org.au domain name as a default for the nagios server.

--- a/heat/hubzero.yaml
+++ b/heat/hubzero.yaml
@@ -87,6 +87,7 @@ parameters:
   nagiosserver:
     type: string
     label: Nagios Server
+    default: nagios.v3apps.org.au
     description: The server that nagios will report to
 
 resources:
