Fixed to default to the IP number: otherwise the server experiences an ssl error.

--- a/heat/hubzero.yaml
+++ b/heat/hubzero.yaml
@@ -87,8 +87,8 @@ parameters:
   nagiosserver:
     type: string
     label: Nagios Server
-    default: nagios.v3apps.org.au
-    description: The server that nagios will report to
+    default: 144.6.225.113
+    description: The IP number of the server that nagios will report to (nagios.v3apps.org.au)
 
 resources:
   # more /etc/firewall_on shows:
