--- a/heat/environment_template.yaml
+++ b/heat/environment_template.yaml
@@ -1,15 +1,10 @@
 # This file is for sensitive heat data - eg: passwords, etc.
 # To use it, make a copy of this file and add the required parameters.
-# The passwords will be used to set the passwords for the software on the target machine
-# It would appear that the mysql root password is overwritten by the HUBZero installation, so it's
-#   effectively a throw away password.
 # Then when launching the instance pass it in via the command line - eg:
 #   heat stack-create --template-file=IdeaProjects/HubZeroPuppet/heat/hubzero.yaml \
 #                     --environment-file=IdeaProjects/HubZeroPuppet/heat/environment.yaml \
 #                     hubzero_test
 parameters:
-  my_sql_root_password: # 6-16 characters and numbers only, starting with a Capital
-  slapd_root_password: # 6-16 characters and numbers only, starting with a Capital
   hub_zero_version: # 1.1 | 1.2 | 1.3 | 1.3.1
   email: # a valid email address to notify when the installation is complete.
   hostname: # a valid fully qualified hostname, eg: hubzero.v3.edu.au
@@ -18,3 +13,4 @@ parameters:
   tenancy_name: # OS_TENANT_NAME in the downloaded NeCTAR project resource file
   nectar_user_id: # OS_USERNAME in the downloaded NeCTAR project resource file
   swift_password: # OS_PASSWORD in the downloaded NeCTAR project resource file
+  pgp_passphraze: # The password used to access Swift backups.
