--- a/heat/hubzero.yaml
+++ b/heat/hubzero.yaml
@@ -81,14 +81,14 @@ parameters:
       - allowed_values: [1.1, 1.2, 1.3, 1.3.1]
         description: Will install either 1.1.0, 1.2.2, or 1.3.0, or 1.3.1
 
-  # not strictly needed, but useful
+  # the zones below support the sending of email
   availability_zone:
     type: string
     label: Availability Zone
     description: The NeCTAR zone in which the VM is to run
     default: melbourne-qh2
     constraints:
-      - allowed_values: ["melbourne", "melbourne-qh2", "melbourne-np", "monash", "qld", "intersect", "tasmania", "pawsey", ""]
+      - allowed_values: ["melbourne", "melbourne-qh2", "melbourne-np", "monash", "tasmania",  "NCI", "sa"]
         description: The NeCTAR zones in which the the instance can be launched.
 
   hostname:
