--- a/heat/environment_template.yaml
+++ b/heat/environment_template.yaml
@@ -6,11 +6,11 @@
 #                     hubzero_test
 parameters:
   hub_zero_version: # 1.1 | 1.2 | 1.3 | 1.3.1
-  email_postmaster: # a valid email address to notify of events on the server, such as the installation completion.
-  hostname: # a valid fully qualified hostname, eg: hubzero.v3.edu.au
-  nagiosserver : # the nagios host that will be monitoring this server.
-  key: # the key pair to use to launch the vm
+  email_postmaster: # A valid email address to notify of events on the server, such as the installation completion.
+  hostname: # A valid fully qualified hostname, eg: hubzero.v3.edu.au
+  nagiosserver: # The nagios host that will be monitoring this server.
+  key: # The name of key pair to use when launch the NeCTAR vm
   tenancy_name: # OS_TENANT_NAME in the downloaded NeCTAR project resource file
   nectar_user_id: # OS_USERNAME in the downloaded NeCTAR project resource file
   swift_password: # OS_PASSWORD in the downloaded NeCTAR project resource file
-  pgp_passphraze: # The password used to access Swift backups.
+  pgp_passphraze: # The passphrase that you want to use to access your Swift backups.
