--- a/heat/environment_template.yaml
+++ b/heat/environment_template.yaml
@@ -8,9 +8,8 @@ parameters:
   hub_zero_version: # 1.1 | 1.2 | 1.3 | 1.3.1
   email_postmaster: # A valid email address to notify of events on the server, such as the installation completion.
   hostname: # A valid fully qualified hostname, eg: hubzero.v3.edu.au
-  nagiosserver: # The nagios host that will be monitoring this server.
   key: # The name of key pair to use when launch the NeCTAR vm
   tenancy_name: # OS_TENANT_NAME in the downloaded NeCTAR project resource file
   nectar_user_id: # OS_USERNAME in the downloaded NeCTAR project resource file
   swift_password: # OS_PASSWORD in the downloaded NeCTAR project resource file
-  pgp_passphraze: # The passphrase that you want to use to access your Swift backups.
+  pgp_passphraze: # The passphrase that you want to use to access your Swift backups. Must be at least 6 characters long
