--- a/heat/environment_template.yaml
+++ b/heat/environment_template.yaml
@@ -5,7 +5,7 @@
 #                     --environment-file=IdeaProjects/HubZeroPuppet/heat/environment.yaml \
 #                     hubzero_test
 parameters:
-  hub_zero_version: # 1.1 | 1.2 | 1.3 | 1.3.1
+  hub_zero_version: # 1.1 | 1.2 | 1.3
   email_postmaster: # A valid email address to notify of events on the server, such as the installation completion.
   hostname: # A valid fully qualified hostname, eg: hubzero.v3.edu.au
   key: # The name of key pair to use when launch the NeCTAR vm
